[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenwise-ai"
version = "0.1.0"
description = "Spend less, agent more. Token optimization SDK for Agentic AI."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "Daino" }]
keywords = ["llm", "token", "optimization", "openai", "agent", "agentic-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["openai>=1.0"]

[project.urls]
Homepage = "https://github.com/DainoJung/tokenwise"
Repository = "https://github.com/DainoJung/tokenwise"

[tool.setuptools.packages.find]
include = ["tokenwise*"]
